--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
   <meta name="description" content="">
   <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="google-site-verification" content="62xPIyRlh0QrneEpt4tY2xCRFdQEQaPUKEIHPOap0NY" />
   <title>Krystof Beuermann - Software Engineer aus Münster</title>
   <title>React App</title>
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
