--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,29 @@
       content="62xPIyRlh0QrneEpt4tY2xCRFdQEQaPUKEIHPOap0NY"
     />
     <title>Krystof Beuermann - Software Engineer aus Münster</title>
+
+    <!-- Matomo -->
+    <script type="text/javascript">
+      var _paq = window._paq || [];
+      /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+      _paq.push(["trackPageView"]);
+      _paq.push(["enableLinkTracking"]);
+      (function() {
+        var u = "//analytics.blackbox.ms/";
+        _paq.push(["setTrackerUrl", u + "analysisServer"]);
+        _paq.push(["setSiteId", "1"]);
+        var d = document,
+          g = d.createElement("script"),
+          s = d.getElementsByTagName("script")[0];
+        g.type = "text/javascript";
+        g.async = true;
+        g.defer = true;
+        g.src = u + "analysisClient";
+        s.parentNode.insertBefore(g, s);
+      })();
+    </script>
+    <!-- End Matomo Code -->
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -31,6 +54,14 @@
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
+
+      <!-- Matomo Image Tracker-->
+      <img
+        src="https://analytics.blackbox.ms/analysisServer?idsite=1&amp;rec=1"
+        style="border: 0;"
+        alt=""
+      />
+      <!-- End Matomo -->
     </noscript>
     <div id="root"></div>
     <!--
